bin_PROGRAMS = phatfanslider phatsliderbutton phatkeyboard phat2dpad

phatfanslider_SOURCES = fanslider.c
phatfanslider_CFLAGS = `pkg-config --cflags gtk+-2.0` -I..
phatfanslider_LIBS = `pkg-config --libs gtk+-2.0`
phatfanslider_LDADD = ../phat/libphat.la

phatsliderbutton_SOURCES = sliderbutton.c
phatsliderbutton_CFLAGS = `pkg-config --cflags gtk+-2.0` -I..
phatsliderbutton_LIBS = `pkg-config --libs gtk+-2.0`
phatsliderbutton_LDADD = ../phat/libphat.la

phatkeyboard_SOURCES = keyboard.c
phatkeyboard_CFLAGS = `pkg-config --cflags gtk+-2.0` -I..
phatkeyboard_LIBS = `pkg-config --libs gtk+-2.0`
phatkeyboard_LDADD = ../phat/libphat.la

phat2dpad_SOURCES = 2dpad.c
phat2dpad_CFLAGS = `pkg-config --cflags gtk+-2.0` -I..
phat2dpad_LIBS = `pkg-config --libs gtk+-2.0`
phat2dpad_LDADD = ../phat/libphat.la

