bin_PROGRAMS = phatfanslider phatsliderbutton phatkeyboard phatpad phatknob phatslider phatsampledisplay

phatfanslider_SOURCES = fanslider.c
phatfanslider_CFLAGS = `pkg-config --cflags gtk+-2.0` -g -I..
phatfanslider_LIBS = `pkg-config --libs gtk+-2.0`
phatfanslider_LDADD = ../phat/libphat.la

phatsliderbutton_SOURCES = sliderbutton.c
phatsliderbutton_CFLAGS = `pkg-config --cflags gtk+-2.0` -g -I..
phatsliderbutton_LIBS = `pkg-config --libs gtk+-2.0`
phatsliderbutton_LDADD = ../phat/libphat.la

phatkeyboard_SOURCES = keyboard.c
phatkeyboard_CFLAGS = `pkg-config --cflags gtk+-2.0` -g -I..
phatkeyboard_LIBS = `pkg-config --libs gtk+-2.0`
phatkeyboard_LDADD = ../phat/libphat.la

phatpad_SOURCES = pad.c
phatpad_CFLAGS = `pkg-config --cflags gtk+-2.0` -g -I..
phatpad_LIBS = `pkg-config --libs gtk+-2.0`
phatpad_LDADD = ../phat/libphat.la

phatknob_SOURCES = knob.c
phatknob_CFLAGS = `pkg-config --cflags gtk+-2.0` -g -I..
phatknob_LIBS = `pkg-config --libs gtk+-2.0`
phatknob_LDADD = ../phat/libphat.la

phatslider_SOURCES = slider.c
phatslider_CFLAGS = `pkg-config --cflags gtk+-2.0` -g -I..
phatslider_LIBS = `pkg-config --libs gtk+-2.0`
phatslider_LDADD = ../phat/libphat.la

phatsampledisplay_SOURCES = sampledisplay.c
phatsampledisplay_CFLAGS = `pkg-config --cflags gtk+-2.0` -g -I..
phatsampledisplay_LIBS = `pkg-config --libs gtk+-2.0`
phatsampledisplay_LDADD = ../phat/libphat.la


