bin_PROGRAMS = phatfanslider phatsliderbutton phatkeyboard phatpad phatknob phatslider phatsampledisplay phatmeter phatscrolloscope

phatfanslider_SOURCES = fanslider.c
phatfanslider_CFLAGS = `pkg-config --cflags gtk+-2.0` -g -I..
phatfanslider_LIBS = `pkg-config --libs gtk+-2.0` -lsndfile
phatfanslider_LDADD = ../phat/libphat.la

phatsliderbutton_SOURCES = sliderbutton.c
phatsliderbutton_CFLAGS = `pkg-config --cflags gtk+-2.0` -g -I..
phatsliderbutton_LIBS = `pkg-config --libs gtk+-2.0` -lsndfile
phatsliderbutton_LDADD = ../phat/libphat.la

phatkeyboard_SOURCES = keyboard.c
phatkeyboard_CFLAGS = `pkg-config --cflags gtk+-2.0` -g -I..
phatkeyboard_LIBS = `pkg-config --libs gtk+-2.0` -lsndfile
phatkeyboard_LDADD = ../phat/libphat.la

phatpad_SOURCES = pad.c
phatpad_CFLAGS = `pkg-config --cflags gtk+-2.0` -g -I..
phatpad_LIBS = `pkg-config --libs gtk+-2.0` -lsndfile
phatpad_LDADD = ../phat/libphat.la

phatknob_SOURCES = knob.c
phatknob_CFLAGS = `pkg-config --cflags gtk+-2.0` -g -I..
phatknob_LIBS = `pkg-config --libs gtk+-2.0` -lsndfile
phatknob_LDADD = ../phat/libphat.la

phatslider_SOURCES = slider.c
phatslider_CFLAGS = `pkg-config --cflags gtk+-2.0` -g -I..
phatslider_LIBS = `pkg-config --libs gtk+-2.0` -lsndfile
phatslider_LDADD = ../phat/libphat.la

phatsampledisplay_SOURCES = sampledisplay.c
phatsampledisplay_CFLAGS = `pkg-config --cflags gtk+-2.0` -g -I..
phatsampledisplay_LIBS = `pkg-config --libs gtk+-2.0` -lsndfile
phatsampledisplay_LDADD = ../phat/libphat.la

phatmeter_SOURCES = meters.c
phatmeter_CFLAGS = `pkg-config --cflags gtk+-2.0` -I..
phatmeter_LIBS = `pkg-config --libs gtk+-2.0` -lsndfile
phatmeter_LDADD = ../phat/libphat.la

phatscrolloscope_SOURCES = scrolloscope.c
phatscrolloscope_CFLAGS = `pkg-config --cflags gtk+-2.0` -I..
phatscrolloscope_LDFLAGS = `pkg-config --libs gtk+-2.0` -ljack -lpthread -lrt -lsndfile
phatscrolloscope_LDADD = ../phat/libphat.la


